# command_line

./: Cargo.toml  build.rs  command_line  copy_to_desktop.sh  justfile  readme.md  rustfmt.toml
proto/: rule.proto
src/: error.rs  main.rs
src/protos/: rule.rs
src/task/: mod.rs  operation_reason_add.rs  rate_plan_online_payment_channel_unset.rs  room_attribute_add.rs  tag_add.rs  tag_remove.rs
src/tasks/: auth_permission_add.rs  base_rate_limit_add.rs  mod.rs  operation_reason_add.rs  operation_reason_delete_all.rs  rate_plan_online_payment_channel_unset.rs  rate_plan_update.rs  room_attribute_add.rs  rule_add.rs  tag_add.rs  tag_remove.rs  user_identity_add.rs
src/types/: env.rs  mod.rs  trn_code.rs
src/utils/: util.rs
