[package]
name = "command_line"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run_script = "0.10"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "mysql", "uuid"] }
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = { version = "1" }
thiserror = { version = "1" }

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1