[package]
name = "command_line"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
run_script = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "uuid", "macros", "json"] }
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
anyhow = { version = "1" }
thiserror = "1"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
csv = "1.2"
tonic = "0.8"
prost = "0.11"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
incremental = true

[profile.dev]
split-debuginfo = "unpacked"
